native/emulator_loop/include/emulator_loop.h

// ── Native game loop ───────────────────────────────────────────────────────
typedef void (*emu_retro_run_t)(void);
void emulator_loop_stop(void);
void emulator_loop_set_paused(bool paused);
void emulator_loop_set_speed(int32_t speed);
bool emulator_loop_is_running(void);
/// One [retro_run] + netplay snapshot; holds the global core mutex.
void emulator_loop_advance_frame(emu_retro_run_t retro_run);
void emulator_loop_core_lock(void);
void emulator_loop_core_unlock(void);
/// Block until the native loop thread has exited (after [emulator_loop_stop]).
bool emulator_loop_wait_until_stopped(void);
// ── Input (called from Dart on button events) ─────────────────────────────
void emulator_loop_set_input_bit(int32_t btn_id, bool pressed);
void emulator_loop_set_input_bit_for_port(unsigned port, int32_t btn_id,
                                          bool pressed);
void emulator_loop_set_port_input_mask(unsigned port, uint64_t mask);
void emulator_loop_clear_inputs(void);
// ── Audio ring buffer ───────────────────────────────────────────────────────
int32_t emulator_loop_audio_available(void);
int32_t emulator_loop_audio_read(int16_t* out, int32_t max_samples);
void emulator_loop_audio_flush(void);
// Tell libretro cores (e.g. mGBA) which rate to resample to before audio_batch.
void emulator_loop_set_target_sample_rate(unsigned sample_rate);
double emulator_loop_get_reported_sample_rate(void);
// iOS: activate AVAudioSession and return actual hardware rate (call before retro_load_game).
double emulator_loop_prepare_audio_output_rate(double preferred_hz);
// iOS: AudioUnit pulls from the ring buffer (no Dart timer).
void emulator_loop_audio_start(double sample_rate);
void emulator_loop_audio_stop(void);
void emulator_loop_audio_set_paused(bool paused);
void emulator_loop_audio_set_playback_speed(int32_t speed);
// ── Frame counter ──────────────────────────────────────────────────────────
uint64_t emulator_loop_frame_count(void);
// ── Rumble events (set by libretro rumble callback, polled by Dart) ───────
uint64_t emulator_loop_rumble_sequence(void);
uint32_t emulator_loop_rumble_strong(void);
uint32_t emulator_loop_rumble_weak(void);
// When false, video refresh only updates the thumbnail buffer (no GPU Surface).
void emulator_loop_set_present_to_texture(bool enable);
// When true, rollback resimulation suppresses video/audio callback output.
void emulator_loop_set_silent_frame_output(bool enable);
// ── Last rendered frame (valid after retro_run, read from Dart thread) ────
// Returns RGBA8888 pointer; sets width/height via out-params.
// Returns NULL if no frame has been rendered yet.
const uint8_t* emulator_loop_last_frame(int32_t* width_out, int32_t* height_out);
/// Increments only when video_refresh receives non-null pixel data.
uint64_t emulator_loop_last_frame_serial(void);
void emulator_loop_reset_video_state(void);