lib/core/emulator_loop/emulator_loop_ffi.dart


/// One frame under the global core mutex (netplay / rollback).
typedef _AdvanceNative =
    Void Function(Pointer<NativeFunction<Void Function()>>);
typedef _AdvanceDart = void Function(Pointer<NativeFunction<Void Function()>>);
final _advanceFrame = emuLoopLib.lookupFunction<_AdvanceNative, _AdvanceDart>(
  'emulator_loop_advance_frame',
);

void advanceEmulatorFrame(
  Pointer<NativeFunction<Void Function()>> retroRunPtr,
) {
  _advanceFrame(retroRunPtr);
}

typedef _WaitStoppedNative = Bool Function();
typedef _WaitStoppedDart = bool Function();
final _waitUntilStopped = emuLoopLib
    .lookupFunction<_WaitStoppedNative, _WaitStoppedDart>(
      'emulator_loop_wait_until_stopped',
    );

bool waitUntilEmulatorStopped() => _waitUntilStopped();

/// Run [count] frames (mutex-serialized). Do not use while [startNativeLoop] runs.
void runSyncFrames(
  Pointer<NativeFunction<Void Function()>> retroRunPtr,
  int count,
) {
  if (count <= 0) return;
  for (var i = 0; i < count; i++) {
    advanceEmulatorFrame(retroRunPtr);
  }
}

typedef _VoidNative = Void Function();
typedef _VoidDart = void Function();
final stopNativeLoop = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_stop',
);

final _coreLock = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_core_lock',
);

final _coreUnlock = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_core_unlock',
);

T runWithCoreLock<T>(T Function() action) {
  _coreLock();
  try {
    return action();
  } finally {
    _coreUnlock();
  }
}

typedef _PausedNative = Void Function(Bool);
typedef _PausedDart = void Function(bool);
final setLoopPaused = emuLoopLib.lookupFunction<_PausedNative, _PausedDart>(
  'emulator_loop_set_paused',
);

typedef _IsRunNative = Bool Function();
typedef _IsRunDart = bool Function();
final isLoopRunning = emuLoopLib.lookupFunction<_IsRunNative, _IsRunDart>(
  'emulator_loop_is_running',
);

// ── Input ──────────────────────────────────────────────────────────────────
typedef _SetInputNative = Void Function(Int32, Bool);
typedef _SetInputDart = void Function(int, bool);
final setInputBit = emuLoopLib.lookupFunction<_SetInputNative, _SetInputDart>(
  'emulator_loop_set_input_bit',
);

final clearInputs = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_clear_inputs',
);

typedef _SetPortInputNative = Void Function(Uint32, Uint64);
typedef _SetPortInputDart = void Function(int, int);
final setPortInputMask = emuLoopLib
    .lookupFunction<_SetPortInputNative, _SetPortInputDart>(
      'emulator_loop_set_port_input_mask',
    );

typedef _SetInputForPortNative = Void Function(Uint32, Int32, Bool);
typedef _SetInputForPortDart = void Function(int, int, bool);
final setInputBitForPort = emuLoopLib
    .lookupFunction<_SetInputForPortNative, _SetInputForPortDart>(
      'emulator_loop_set_input_bit_for_port',
    );

// ── Audio ring buffer ──────────────────────────────────────────────────────
typedef _AvailNative = Int32 Function();
typedef _AvailDart = int Function();
final audioAvailable = emuLoopLib.lookupFunction<_AvailNative, _AvailDart>(
  'emulator_loop_audio_available',
);

typedef _ReadNative = Int32 Function(Pointer<Int16>, Int32);
typedef _ReadDart = int Function(Pointer<Int16>, int);
final _audioRead = emuLoopLib.lookupFunction<_ReadNative, _ReadDart>(
  'emulator_loop_audio_read',
);

/// Pre-allocated scratch buffer (avoids GC pressure per drain call).
const int _audioScratchSamples = 16384;
final Pointer<Int16> _audioBuf = calloc<Int16>(_audioScratchSamples);

/// Drain up to [maxSamples] int16 samples from the ring buffer.
/// Returns a copy so the next drain cannot race with SoLoud on another thread.
Int16List? drainAudio({int maxSamples = 4096}) {
  final avail = audioAvailable();
  if (avail <= 0) return null;
  final n = avail.clamp(0, maxSamples.clamp(0, _audioScratchSamples));
  final read = _audioRead(_audioBuf, n);
  if (read <= 0) return null;
  return Int16List.fromList(_audioBuf.asTypedList(read));
}

// ── Frame counter ──────────────────────────────────────────────────────────
typedef _FrameCountNative = Uint64 Function();
typedef _FrameCountDart = int Function();
final _frameCount = emuLoopLib
    .lookupFunction<_FrameCountNative, _FrameCountDart>(
      'emulator_loop_frame_count',
    );

int nativeFrameCount() => _frameCount();

/// Frames actually shown via Flutter Texture (iOS CADisplayLink).
typedef _PresentedFramesNative = Uint64 Function();
typedef _PresentedFramesDart = int Function();
final _PresentedFramesDart? _presentedFramesLookup = Platform.isIOS
    ? emuLoopLib.lookupFunction<_PresentedFramesNative, _PresentedFramesDart>(
        'game_texture_ios_presented_frame_count',
      )
    : null;

int nativePresentedFrameCount() {
  final lookup = _presentedFramesLookup;
  if (lookup == null) return nativeFrameCount();
  return lookup();
}

// ── Native audio (iOS AVAudioEngine) ───────────────────────────────────────
typedef _AudioStartNative = Void Function(Double);
typedef _AudioStartDart = void Function(double);
final _audioStart = emuLoopLib
    .lookupFunction<_AudioStartNative, _AudioStartDart>(
      'emulator_loop_audio_start',
    );

final _audioStop = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_audio_stop',
);

typedef _AudioPausedNative = Void Function(Bool);
typedef _AudioPausedDart = void Function(bool);
final _audioSetPaused = emuLoopLib
    .lookupFunction<_AudioPausedNative, _AudioPausedDart>(
      'emulator_loop_audio_set_paused',
    );

typedef _SetTargetRateNative = Void Function(Uint32);
typedef _SetTargetRateDart = void Function(int);
final _setTargetSampleRate = emuLoopLib
    .lookupFunction<_SetTargetRateNative, _SetTargetRateDart>(
      'emulator_loop_set_target_sample_rate',
    );

typedef _GetReportedRateNative = Double Function();
typedef _GetReportedRateDart = double Function();
final _getReportedSampleRate = emuLoopLib
    .lookupFunction<_GetReportedRateNative, _GetReportedRateDart>(
      'emulator_loop_get_reported_sample_rate',
    );

/// Cores can resample to this rate in [retro_load_game]. Call before loading ROM.
void setTargetSampleRate(int sampleRate) =>
    _setTargetSampleRate(sampleRate.clamp(8000, 192000));

double getReportedSampleRate() => _getReportedSampleRate();

final _audioFlush = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_audio_flush',
);

void flushAudioRing() => _audioFlush();

final _resetVideoState = emuLoopLib.lookupFunction<_VoidNative, _VoidDart>(
  'emulator_loop_reset_video_state',
);

/// Reset native state after a short libretro probe (thumbnail / import verify).
void resetLibretroProbeSession() {
  clearInputs();
  flushAudioRing();
  _resetVideoState();
  resetControllerPortCount();
  setEmulationSpeed(1);
}

typedef _SetPresentNative = Void Function(Bool);
typedef _SetPresentDart = void Function(bool);
final _setPresentToTexture = emuLoopLib
    .lookupFunction<_SetPresentNative, _SetPresentDart>(
      'emulator_loop_set_present_to_texture',
    );

/// When false, [retro_run] only fills the thumbnail buffer (no Android Surface).
void setPresentToTexture(bool enable) => _setPresentToTexture(enable);

final _setSilentFrameOutput = emuLoopLib
    .lookupFunction<_SetPresentNative, _SetPresentDart>(
      'emulator_loop_set_silent_frame_output',
    );

/// Suppresses video/audio callback output during rollback resimulation.
void setSilentFrameOutput(bool enable) => _setSilentFrameOutput(enable);

typedef _PrepareRateNative = Double Function(Double);
typedef _PrepareRateDart = double Function(double);
final _prepareAudioOutputRate = Platform.isIOS
    ? emuLoopLib.lookupFunction<_PrepareRateNative, _PrepareRateDart>(
        'emulator_loop_prepare_audio_output_rate',
      )
    : null;

/// iOS: open AVAudioSession before [retro_load_game]; returns actual Hz (e.g. 48000).
double prepareAudioOutputRate(double preferredHz) {
  final fn = _prepareAudioOutputRate;
  if (fn == null) {
    setTargetSampleRate(preferredHz.round());
    return preferredHz;
  }
  return fn(preferredHz);
}

void startNativeAudio(double sampleRate) => _audioStart(sampleRate);
void stopNativeAudio() => _audioStop();
void setNativeAudioPaused(bool paused) => _audioSetPaused(paused);

typedef _SetSpeedNative = Void Function(Int32);
typedef _SetSpeedDart = void Function(int);
final _setEmulationSpeed = emuLoopLib
    .lookupFunction<_SetSpeedNative, _SetSpeedDart>('emulator_loop_set_speed');

typedef _SetAudioSpeedNative = Void Function(Int32);
typedef _SetAudioSpeedDart = void Function(int);
final _setAudioPlaybackSpeed = Platform.isIOS
    ? emuLoopLib.lookupFunction<_SetAudioSpeedNative, _SetAudioSpeedDart>(
        'emulator_loop_audio_set_playback_speed',
      )
    : null;

/// Fast-forward: run [speed] retro_run calls per frame period (1–3).
void setEmulationSpeed(int speed) {
  final clamped = speed.clamp(1, 3);
  _setEmulationSpeed(clamped);
  _setAudioPlaybackSpeed?.call(clamped);
}

// ── Rumble events ─────────────────────────────────────────────────────────
typedef _RumbleSeqNative = Uint64 Function();
typedef _RumbleSeqDart = int Function();
final _rumbleSequence = emuLoopLib
    .lookupFunction<_RumbleSeqNative, _RumbleSeqDart>(
      'emulator_loop_rumble_sequence',
    );

typedef _RumbleStrengthNative = Uint32 Function();
typedef _RumbleStrengthDart = int Function();
final _rumbleStrong = emuLoopLib
    .lookupFunction<_RumbleStrengthNative, _RumbleStrengthDart>(
      'emulator_loop_rumble_strong',
    );
final _rumbleWeak = emuLoopLib
    .lookupFunction<_RumbleStrengthNative, _RumbleStrengthDart>(
      'emulator_loop_rumble_weak',
    );

int rumbleSequence() => _rumbleSequence();
int rumbleStrong() => _rumbleStrong();
int rumbleWeak() => _rumbleWeak();

// ── Last rendered frame (for thumbnail capture) ────────────────────────────
typedef _LastFrameNative =
    Pointer<Uint8> Function(Pointer<Int32>, Pointer<Int32>);
typedef _LastFrameDart =
    Pointer<Uint8> Function(Pointer<Int32>, Pointer<Int32>);
final _lastFrame = emuLoopLib.lookupFunction<_LastFrameNative, _LastFrameDart>(
  'emulator_loop_last_frame',
);

/// Result of [captureLastFrame].
class FrameCapture {
  final Uint8List rgba;
  final int width;
  final int height;
  const FrameCapture(this.rgba, this.width, this.height);
}

const int _maxCapturedFrameBytes = 1024 * 1024 * 4;

typedef _FrameSerialNative = Uint64 Function();
typedef _FrameSerialDart = int Function();
final _lastFrameSerial = emuLoopLib
    .lookupFunction<_FrameSerialNative, _FrameSerialDart>(
      'emulator_loop_last_frame_serial',
    );

/// Bumps only when libretro delivers non-null video_refresh data.
int lastFrameSerial() => _lastFrameSerial();

/// Last rendered width/height (no pixel copy).
({int width, int height})? lastRenderedSize() {
  final wPtr = calloc<Int32>();
  final hPtr = calloc<Int32>();
  try {
    final ptr = _lastFrame(wPtr, hPtr);
    if (ptr == nullptr) {
      return null;
    }
    final w = wPtr.value;
    final h = hPtr.value;
    if (w <= 0 || h <= 0) {
      return null;
    }
    return (width: w, height: h);
  } finally {
    calloc.free(wPtr);
    calloc.free(hPtr);
  }
}

/// Returns the last RGBA8888 frame as a copy, or null if none rendered yet.
FrameCapture? captureLastFrame() {
  final wPtr = calloc<Int32>();
  final hPtr = calloc<Int32>();
  try {
    final ptr = _lastFrame(wPtr, hPtr);
    if (ptr == nullptr) return null;
    final w = wPtr.value;
    final h = hPtr.value;
    if (w <= 0 || h <= 0 || w > 4096 || h > 4096) return null;
    final byteCount = w * h * 4;
    if (byteCount <= 0 || byteCount > _maxCapturedFrameBytes) return null;
    // Copy because gConvBuf can be overwritten on the emulation thread.
    return FrameCapture(Uint8List.fromList(ptr.asTypedList(byteCount)), w, h);
  } finally {
    calloc.free(wPtr);
    calloc.free(hPtr);
  }
}
